minor fixed footer : CSS/color/text-align

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -78,7 +78,7 @@ footer {
   position: relative;
   margin-top: 0px;
   padding-top: 30px;
-  background-color: #1A1A1A;
+  background: #434341;
   color: #fff;
   text-align: center;
   font-family: $paragraph;
@@ -113,7 +113,7 @@ footer {
 
   div.link-sect {
     width:50%;
-    margin-left:50px
+    line-height:30px;
   }
 
 }
